# mousefox

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  util.py
docs/: make.py
docs/templates/: frame.html.jinja2  index.html.jinja2  module.html.jinja2  theme.css
gui/: app.py  connect.py  connectframe.py  gameframe.py  hotkeys.toml  server.py  serverframe.py
kex/: __init__.py  kivy.py  util.py
kex/widgets/: __init__.py  app.py  input_manager.py  layouts.py  list.py  uix.py  win_focus_patch.py
logic/: __init__.py  client.py  game.py  gui.py
mousefox/: __init__.py  util.py
mousefox/app/: __init__.py  adminframe.py  app.py  clientframe.py  connectframe.py  connectpanel.py  hotkeys.toml  lobbyframe.py  palette.py  serverframe.py  userframe.py
mousefox/examples/: __init__.py  chat.py  tictactoe.py
tictactoe/: __init__.py  client.py  game.py  gui.py
