[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mousefox"
description = "A framework for multiplayer Python games using Kvex and pgnet."
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  "Intended Audience :: Developers",
]
dependencies = [
  "loguru >= 0.6.0",
  "tomli >= 2.0.1, == 2.*",
  "arrow >= 1.2.3, == 1.*",
  "pgnet @ git+https://git@github.com/ArielHorwitz/pgnet.git@v0.2.1",
  "kvex @ git+https://git@github.com/ArielHorwitz/kvex.git@v0.1.3",
]

[project.optional-dependencies]
dev = [
    "pdoc >= 12.3, == 12.*",
]

[tool.setuptools.packages.find]
include = [
  "mousefox*",
]

[tool.setuptools.package-data]
mousefox = [
  "app/hotkeys.toml",
]

[project.scripts]
mf-ttt = "mousefox.examples.tictactoe:run"
mf-chat = "mousefox.examples.chat:run"
